2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-applet.c: (cpufreq_applet_size_request),
	(cpufreq_applet_refresh): Fix size requisition. If the applet is
	using a vbox in an horixontal panel, the required width is not
	labels_width + icon_width but the maximum. Fixes bug #561542.
	
2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/Makefile.am: Explicitly add libgnome flags and libs since
	it's needed for gnome-help so that it builds again now.
	
2008-11-14  Callum McKenzie  <callum@spooky-possum.org>

	* cpufreq-utils.c:
	* cpufreq-popup.c:
	* cpufreq-prefs.h:
	* cpufreq-applet.c: Patch from Maxim Ermilov to rationalise
	GTK includes. See bug 560678.

==================== 2.24.0.1 ====================

2008-08-20  Philipp Kerling  <k.philipp@gmail.com>

	* Makefile.am: Change mistyped "(DESTDIR)" to "$(DESTDIR)". Partially
	fixes bug #547647.

2008-05-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/Makefile.am:
	* src/cpufreq-applet.c:
	* src/cpufreq-popup.[ch]:
	* src/cpufreq-selector.[ch]:
	* src/cpufreq-utils.c:
	* src/cpufreq-selector/Makefile.am:
	* src/cpufreq-selector/main.c:
	* src/cpufreq-selector/cpufreq-selector-factory.[ch]:
	* src/cpufreq-selector/cpufreq-selector-service.[ch]:
	* src/cpufreq-selector/cpufreq-selector-service.xml:
	* src/cpufreq-selector/org.gnome.CPUFreqSelector.conf:
	* src/cpufreq-selector/org.gnome.CPUFreqSelector.service.in:
	* src/cpufreq-selector/org.gnome.cpufreqselector.policy.in:

	Use PolicyKit when available in the cpufreq-selector instead of
	installing it with suid bit enabled. Fixes bug #528536.
	
2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* cpufreq-preferences.ui
	* src/cpufreq-prefs.c
	* src/cpufreq-applet.c
	* Makefile.am: Convert from glade to gtk-builder. Patch from Jaap
	Haitsma (bug #521082).
	
2008-02-10  Kjartan Maraas  <kmaraas@gnome.org>

	* src/cpufreq-utils.c: (cpufreq_file_get_contents): signed vs unsigned
	fix.
