@@ -1,5 +1,16 @@
 2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>
 
+	* src/cpufreq-monitor-sysfs.c:
+	* src/cpufreq-selector/cpufreq-selector-procfs.c:
+	* src/cpufreq-selector/cpufreq-selector-sysfs.c:
+	* src/cpufreq-utils.c:
+	* src/cpufreq-prefs.c:
+	* src/cpufreq-selector.c:
+	* src/cpufreq-monitor-procfs.c:
+	* src/cpufreq-monitor-cpuinfo.c: Fix several compile warnings.
+	
+2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>
+
 	* src/cpufreq-applet.c: (cpufreq_applet_size_request),
 	(cpufreq_applet_refresh): Fix size requisition. If the applet is
 	using a vbox in an horixontal panel, the required width is not
